--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -121,6 +121,11 @@ img {
   margin-bottom: 0.5rem;
 }
 
+.title-center{
+  text-align: center;
+  margin-bottom: 3rem;
+}
+
 /*=============== STYLE SWITCHER ===============*/
 
 /*=============== HEADER & NAV ===============*/
@@ -243,7 +248,7 @@ img {
     border-radius: 21% 79% 50% 50% / 21% 50% 50% 79%;
   }
 
-  0%{
+  100%{
     border-radius: 65% 35% 29% 71% / 55% 30% 70% 45%;
   }
 
@@ -259,7 +264,7 @@ img {
     border-radius: 65% 35% 29% 71% / 55% 30% 70% 45%;
   }
 
-  0%{
+  100%{
     border-radius: 21% 79% 50% 50% / 21% 50% 50% 79%;
   }
 
@@ -334,6 +339,13 @@ img {
   transform: translateY(0.25rem);
 }
 
+.separator {
+  width: 10%;
+  height: 2px;
+  background-color: var(--text-color);
+  margin: 10px 0;
+}
+
 /* About img hover */
 
 .about__img-wrapper:hover .about__img{
@@ -369,6 +381,7 @@ img {
 .about__social-links{
   display: flex;
   align-items: center;
+  
 }
 
 .about__bottom{
@@ -387,24 +400,101 @@ img {
 }
 
 .about__social-links{
-  display: flex; /* Adicionado */
+  display: flex; 
   column-gap: 1.25rem;
 }
 
 .about__social-links::before{
-  display: none; /* Adicionado */
+  display: none; 
 }
 
-.about__social-links a { /* Adicionado */
+.about__social-links a {
   color: var(--text-color);
   transition: all 0.3s ease;
 }
 
-.about__social-links a:hover { /* Adicionado */
+.about__social-links a:hover {
   color: var(--first-color);
 }
 
 /*=============== QUALIFICATION ===============*/
+
+.qualification{
+  background-color: var(--container-color);
+}
+
+.resume__container{
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.resume__heading{
+  text-align: center;
+  font-size: var(--h3-font-size);
+  padding-bottom: 2rem;
+}
+
+.resume__heading,
+.resume__item{
+  border-bottom: 2px solid var(--border-color);
+}
+
+.resume__item:not(:first-child){
+  border-right: 2px solid var(--border-color);
+}
+
+.resume__item{
+  position: relative;
+}
+
+.resume__header{
+  padding: 2rem 1.5rem;
+}
+
+.resume__subtitle{
+  font-size: var(--larger-font-size);
+  cursor: pointer;
+}
+
+.resume__icon{
+  background-color: var(--container-color);
+  border: 2px solid var(--border-color);
+  font-size: var(--h2-font-size);
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  line-height: 1.1em;
+  text-align: center;
+  cursor: pointer;
+  position: absolute;
+  right: -1.5rem;
+  bottom: -1.5rem;
+  z-index: 10;
+}
+
+.resume__content{
+  padding-inline: 1.5rem 3rem;
+}
+
+.resume__data-title{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.resume__title{
+  font-size: var(--h3-font-size);
+}
+
+.resume__date{
+  color: var(--title-color);
+  font-size: var(--large-font-size);
+}
+
+.resume__description{
+  margin-block: 1.25rem 2rem;
+}
+
+
 
 /*=============== SERVICES ===============*/
 
