--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -498,7 +498,44 @@ img {
 
 /*=============== SERVICES ===============*/
 
+.services__container{
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.services__item{
+  background-color: var(--container-color);
+  border: 1px solid var(--container-color);
+  padding: 2.5rem 1.8rem;
+  border-radius: .5rem;
+  position: relative;
+  transition: all .5s ease;
+}
+
 /* Services hover */
+
+.services__item:hover{
+  background-color: var(--body-color);
+  border-color: var(--border-color);
+}
+
+.services__icon{
+  color: var(--first-color);
+  font-size: 1.8rem;
+}
+
+.services__title{
+  font-size: var(--h3-font-size);
+  margin-block: 1.5rem 1rem;
+}
+
+.services__no{
+  position: absolute;
+  right: 2.5rem;
+  top: 1rem;
+  color: var(--title-color);
+  font-size: 3.75rem;
+  opacity: 0.07;
+}
 
 /*=============== SKILLS ===============*/
 
