--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -353,6 +353,10 @@ input[type='checkbox']{
   transition: all .3s ease;
 }
 
+.nav__toggle{
+  display: none;
+}
+
 /* Active link */
 .active-link,
 .nav__link:hover {
@@ -1039,18 +1043,231 @@ input[type='checkbox']{
 /*=============== BREAKPOINTS ===============*/
 /* For large devices */
 @media screen and (max-width: 1200px) {
+  .container{
+    max-width: 960px;
+  }
+
+  :root{
+    --big-font-size: 2.5rem;
+    --h1-font-size: 2rem;
+    --h2-font-size: 1.75rem;
+    --h3-font-size: 1.25rem;
+    --larger-font-size: 1rem;
+    --large-font-size: 0.938rem;
+  }
+
+  .home__img{
+    width: 50px;
+  }
+
+  .about__img-wrapper{
+    width: 350px;
+  }
+
+  .resume__icon{
+    line-height: 1.4em;
+  }
+
+  .services__icon{
+    font-size: 1.5rem;
+  }
+
+  .services__no{
+    font-size: 2.5rem;
+  }
+
+  .services__title{
+    margin-block: 1.25rem .75rem;
+  }
+
+  .style__switcher{
+    width: 200px;
+  }
+
+  .style__switcher-colors .color{
+    width: 24px;
+    height: 24px;
+  }
+
+  .style__switcher-toggler,
+  .style__switcher-theme{
+    width: 40px;
+    height: 40px;
+  }
+
+  .style__switcher-toggler{
+    top: 10%;
+  }
+
+  .style__switcher-theme{
+    bottom: 10%;
+  }
 }
 
 @media screen and (max-width: 992px) {
+
+  .container{
+    max-width: 720px;
+  }
+
+  .home__container,
+  .about__container,
+  .resume__container,
+  .contact__container{
+    grid-template-columns: 1fr;
+  }
+
+  .home__content{
+    order: 1;
+  }
+
+  .home__img-wrapper{
+    margin-inline: auto;
+    display: flex;
+  }
+
+  .about__container,
+  .contact__container{
+    row-gap: 2rem;
+  }
+
+  .about__img:not(:first-child){
+    display: none;
+  }
+
+  .about__img:first-child{
+    clip-path: initial;
+    transform: initial;
+    left: 100%;
+    translate: -50%;
+  }
+
+  .services__container,
+  .skills__container,
+  .work__container{
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .resume__container{
+    row-gap: 2.5rem;
+  }
+
 }
 
 /* For medium devices */
 @media screen and (max-width: 768px) {
+
+  .container{
+    max-width: 560px;
+  }
+
+  .nav{
+    height: calc(var(--header-height) + 1rem);
+  }
+
+  .nav__list{
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: var(--body-color);
+    flex-direction: column;
+    align-items: center;
+    row-gap: .75rem;
+    max-height: 0;
+    overflow: hidden;
+    transition: all .3s ease;
+  }
+
+  .nav__toggle{
+    display: block;
+    color: var(--text-color);
+    font-size: 1.3rem;
+  }
+
+  #nav-toggler:checked ~ .nav__list{
+    max-height: 500px;
+    padding: 1.75rem;
+  }
+
+  .home__img-wrapper{
+    width: 300px;
+  }
+
+  .about__img-wrapper{
+    left: 50%;
+    translate: -100%;
+  }
+
 }
 
 /* For small devices */
 @media screen and (max-width: 576px) {
+
+  .home{
+    padding-top: 7rem;
+  }
+
+  .section{
+    padding-block: 4rem;
+  }
+
+  .resume__icon{
+    display: none;
+  }
+
+  .services__container,
+  .skills__container,
+  .work__container,
+  .form__group{
+    grid-template-columns: 1fr;
+  }
+
+  .footer__container{
+    flex-direction: column;
+    row-gap: 1rem;
+  }
+
 }
 
 @media screen and (max-width: 450px) {
+
+  .about__data{
+    grid-template-columns: 1fr;
+  }
+
+  .about__bottom,
+  .resume__data-title{
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .about__bottom{
+    row-gap: 1.25rem;
+  }
+
+  .about__bottom .btn{
+    order: 1;
+  }
+
+  .resume__data-title{
+    row-gap: .25rem;
+  }
+
+  .resume__header,
+  .skills__titles,
+  .skills__description{
+    padding-inline: 1rem;
+  }
+
+  .resume__content{
+    padding-inline: 1rem 1.5rem;
+  }
+
+  .services__item{
+    padding: 2rem 1.5rem;
+  }
+
+  
+
 }
