--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1199,6 +1199,17 @@ input[type='checkbox']{
     translate: -100%;
   }
 
+  .portfolio__popup-inner{
+    width: 100%;
+    padding: 1.5rem;
+  }
+
+  .portfolio__popup-content{
+    grid-template-columns: 1fr;
+    row-gap: 1.5rem;
+    text-align: center;
+  }
+
 }
 
 /* For small devices */
